# proyecto-final/src/controllers/componente.js
@@ -24,6 +24,50 @@ async function createProcesador(req, res, next) {
     }
 }
 
+async function createRam(req, res, next) {
+    try {
+      const createdRam = await componenteService.createRam(req.body)
+      res.status(201).send(createdRam);
+      logger.info('Ram creada');
+    } catch (error) {
+      error.status = 409;
+      next(error);
+    }
+}
+
+async function createGrafica(req, res, next) {
+    try {
+      const createdGrafica = await componenteService.createGrafica(req.body)
+      res.status(201).send(createdGrafica);
+      logger.info('Grafica creada');
+    } catch (error) {
+      error.status = 409;
+      next(error);
+    }
+}
+
+async function createDiscoDuro(req, res, next) {
+    try {
+      const createdDiscoDuro= await componenteService.createDiscoDuro(req.body)
+      res.status(201).send(createdDiscoDuro);
+      logger.info('Disco duro creado');
+    } catch (error) {
+      error.status = 409;
+      next(error);
+    }
+}
+
+async function createRefrigeracion(req, res, next) {
+    try {
+      const createdRefrigeracion= await componenteService.createRefrigeracion(req.body)
+      res.status(201).send(createdRefrigeracion);
+      logger.info('Refrigeracion creada');
+    } catch (error) {
+      error.status = 409;
+      next(error);
+    }
+}
+
 async function getComponentes(req, res, next) {
     try {
       const componentes = await componenteService.getAllComponentes();
@@ -38,5 +82,9 @@ async function getComponentes(req, res, next) {
   module.exports = {
     createPlacaBase,
     createProcesador,
+    createRam,
+    createDiscoDuro,
+    createGrafica,
+    createRefrigeracion,
     getComponentes, 
 }; 
